# revary

./: README.md  main.py  pyproject.toml  requirements.txt
core/: __init__.py  base.py
revu/: bot.py
src/: main.py
src/core/: __init__.py  base.py  example_cog.py  revu.py
src/revu/: __init__.py
src/revu_cogs/: misc.py  user.py
src/utils/: __init__.py  auth_utils.py  log_utils.py
